1.任务学习路径界面完善和数据逻辑，接口调试；2.单个课程分类列表

--- a/MyApplication/app/src/main/res/layout/common_view_title_bar_course.xml
+++ b/MyApplication/app/src/main/res/layout/common_view_title_bar_course.xml
@@ -29,7 +29,8 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="17dp"
-        android:src="@drawable/bar_search_icon"/>
+        android:visibility="gone"
+        android:src="@drawable/search01_icon" />
 
 
 </RelativeLayout>
