--- a/MyApplication/app/src/main/res/layout/fm_homepage.xml
+++ b/MyApplication/app/src/main/res/layout/fm_homepage.xml
@@ -24,7 +24,8 @@
                 android:id="@+id/rv_news"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/white" />
+                android:background="@color/white"
+                android:paddingTop="5dp" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_required_courses"
