--- a/MyApplication/app/src/main/res/layout/item_for_task_list.xml
+++ b/MyApplication/app/src/main/res/layout/item_for_task_list.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="125dp"
-    android:gravity="center_vertical"
+    android:background="@drawable/bg_common_press"
     android:orientation="vertical">
 
     <LinearLayout
@@ -54,11 +54,12 @@
             android:layout_marginLeft="12dp"
             android:text="任务1：如何提高口语方式" />
 
-        <com.android.ge.ui.customview.ContentInfoView
+        <com.android.ge.ui.customview.TaskContentInfoView
+            android:id="@+id/view_task_content_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="11dp"
-            android:layout_marginTop="16dp"></com.android.ge.ui.customview.ContentInfoView>
+            android:layout_marginTop="16dp"></com.android.ge.ui.customview.TaskContentInfoView>
 
         <TextView
             style="@style/text_10_99"
@@ -68,16 +69,15 @@
             android:layout_marginTop="13dp"
             android:drawableLeft="@drawable/deadline_icon"
             android:drawablePadding="12dp"
-            android:text="2017.03.28" />
+            android:text="截止时间: 2017.03.28" />
 
     </LinearLayout>
-    
+
     <View
         android:id="@+id/view_line"
         android:layout_width="match_parent"
-        android:background="#e3e3e3"
+        android:layout_height="0.5dp"
         android:layout_alignParentBottom="true"
-        android:layout_height="0.5dp"/>
-
+        android:background="#e3e3e3" />
 
 </RelativeLayout>
