--- a/MyApplication/app/src/main/res/layout/activity_course_list.xml
+++ b/MyApplication/app/src/main/res/layout/activity_course_list.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/bg_main"
+    android:orientation="vertical">
 
-    <include
-        layout="@layout/common_view_title_bar_course"/>
+    <include layout="@layout/common_view_title_bar_course" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_course"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:scrollbars="horizontal" />
+        android:background="@color/white" />
 
 </LinearLayout>
