--- a/MyApplication/app/src/main/res/layout/fm_me.xml
+++ b/MyApplication/app/src/main/res/layout/fm_me.xml
@@ -25,7 +25,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="fitXY"
-                    android:background="@color/text_black"
+                    android:background="@drawable/me_bg"
                      />
 
                 <RelativeLayout
@@ -55,7 +55,7 @@
                             android:id="@+id/tv_integral"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="0"
+                            android:text="1000"
                             android:textColor="@color/white"
                             android:textSize="36sp" />
 
@@ -64,7 +64,7 @@
                             android:layout_height="wrap_content"
                             android:layout_below="@id/tv_integral"
                             android:text="@string/learning_points"
-                            android:textColor="#5C6C81"
+                            android:textColor="#DCDCDC"
                             android:textSize="14sp" />
                     </LinearLayout>
 
@@ -73,6 +73,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@id/lin_rank"
+                        android:text="第10名"
                         android:layout_centerHorizontal="true"
                         android:textColor="#c1d4eb"
                         android:textSize="18sp" />
