--- a/MyApplication/app/src/main/res/layout/fm_me_header_title.xml
+++ b/MyApplication/app/src/main/res/layout/fm_me_header_title.xml
@@ -26,10 +26,11 @@
     <ImageView
         android:id="@+id/iv_setting"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginRight="19dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         android:src="@drawable/setting_icon" />
 
 </RelativeLayout>
