--- a/MyApplication/app/src/main/res/layout/fm_task_list.xml
+++ b/MyApplication/app/src/main/res/layout/fm_task_list.xml
@@ -6,13 +6,14 @@
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/bg_main">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/bg_main"
             android:orientation="vertical">
-
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_task"
@@ -24,7 +25,9 @@
                 android:id="@+id/rv_path"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/white"></android.support.v7.widget.RecyclerView>
+                android:layout_marginTop="10dp"
+                android:background="@color/white"
+                android:scrollbars="horizontal"></android.support.v7.widget.RecyclerView>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 
@@ -32,8 +35,8 @@
         android:id="@+id/tv_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone"
         android:layout_centerInParent="true"
         android:text="无内容"
-        android:textColor="@color/text_black" />
+        android:textColor="@color/text_black"
+        android:visibility="gone" />
 </RelativeLayout>
