--- a/MyApplication/app/src/main/res/layout/view_rv_header.xml
+++ b/MyApplication/app/src/main/res/layout/view_rv_header.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:background="@drawable/bg_common_press"
+    android:id="@+id/rel_classify"
     android:layout_height="40dp">
     <TextView
         android:id="@+id/tv_type_title"
