--- a/MyApplication/app/src/main/res/values/styles.xml
+++ b/MyApplication/app/src/main/res/values/styles.xml
@@ -65,6 +65,14 @@
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">#666666</item>
     </style>
+    <style name="text_14_66" parent="@style/singleLine">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#666666</item>
+    </style>
+    <style name="text_12_99" parent="@style/singleLine">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#999999</item>
+    </style>
     <style name="text_10_99" parent="@style/singleLine">
         <item name="android:textSize">10sp</item>
         <item name="android:textColor">#999999</item>
