--- a/MyApplication/app/src/main/res/layout/fm_homepage.xml
+++ b/MyApplication/app/src/main/res/layout/fm_homepage.xml
@@ -18,7 +18,8 @@
             <com.youth.banner.Banner
                 android:id="@+id/banner"
                 android:layout_width="match_parent"
-                android:layout_height="180dp" />
+                android:layout_height="180dp"
+                app:image_scale_type="fit_xy"/>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_news"
