--- a/MyApplication/app/src/main/res/layout/header_for_learning_rv.xml
+++ b/MyApplication/app/src/main/res/layout/header_for_learning_rv.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
@@ -9,7 +10,8 @@
     <com.youth.banner.Banner
         android:id="@+id/banner"
         android:layout_width="match_parent"
-        android:layout_height="180dp" />
+        android:layout_height="180dp"
+        app:image_scale_type="fit_xy"/>
 
     <LinearLayout
         android:layout_width="match_parent"
