1.进度根据服务器返回显示； 2.页面回退时自动刷新数据； 3.任务详情页课程点击跳转； 4.其他bug修复 5.应用图标替换

--- a/MyApplication/app/src/main/res/layout/item_for_required_course.xml
+++ b/MyApplication/app/src/main/res/layout/item_for_required_course.xml
@@ -55,7 +55,8 @@
         android:id="@+id/tv_course_progress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="总进度:60%"
+        android:visibility="visible"
+        android:text="总进度:0%"
         android:textColor="#45C88A"
         android:textSize="11sp" />
 
