任务详情页course情况下数据更新

--- a/MyApplication/app/src/main/res/layout/item_for_task_detail.xml
+++ b/MyApplication/app/src/main/res/layout/item_for_task_detail.xml
@@ -32,7 +32,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
-
             android:text="金山区中小学语文" />
 
         <LinearLayout
@@ -61,7 +60,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:text="已完成20%"
-                android:visibility="gone"
+                android:visibility="visible"
                 android:textColor="#2BC17A"
                 android:textSize="12sp" />
         </LinearLayout>
