--- a/MyApplication/app/src/main/res/drawable/main_tab_homepage.xml
+++ b/MyApplication/app/src/main/res/drawable/main_tab_homepage.xml
@@ -2,5 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" android:exitFadeDuration="@android:integer/config_shortAnimTime">
     <item android:drawable="@drawable/bar_home_hover_icon" android:state_checked="true" />
     <item android:drawable="@drawable/bar_home_icon" android:state_checked="false"/>
+    <item android:drawable="@drawable/bar_home_icon"/>
 
 </selector>
