--- a/MyApplication/app/src/main/res/drawable/main_tab_task.xml
+++ b/MyApplication/app/src/main/res/drawable/main_tab_task.xml
@@ -2,5 +2,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" android:exitFadeDuration="@android:integer/config_shortAnimTime">
     <item android:drawable="@drawable/bar_task_hover_icon" android:state_checked="true" />
     <item android:drawable="@drawable/bar_task_icon" android:state_checked="false"/>
-
+    <item android:drawable="@drawable/bar_task_icon"/>
 </selector>
