--- a/MyApplication/app/src/main/res/layout/activity_login.xml
+++ b/MyApplication/app/src/main/res/layout/activity_login.xml
@@ -41,6 +41,7 @@
                 android:drawableLeft="@drawable/login_user_icon"
                 android:drawablePadding="15dp"
                 android:ellipsize="end"
+                android:text="marchdev@qq.com"
                 android:hint="@string/input_hint_username"
                 android:singleLine="true"
                 android:textColor="@color/text_black"
@@ -62,6 +63,7 @@
                 android:layout_marginLeft="37dp"
                 android:layout_marginRight="33dp"
                 android:layout_marginTop="20dp"
+                android:text="123456"
                 android:background="@color/transparent"
                 android:drawableLeft="@drawable/login_password_icon"
                 android:drawablePadding="15dp"
