--- a/MyApplication/app/src/main/res/layout/item_for_course.xml
+++ b/MyApplication/app/src/main/res/layout/item_for_course.xml
@@ -53,14 +53,32 @@
         android:textColor="@color/text_black"
         android:textSize="12sp" />
 
-    <TextView
-        android:id="@+id/tv_course_descrip"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:maxLines="2"
-        android:text="来自新东方"
-        android:textColor="#999999"
-        android:textSize="11sp" />
+        android:layout_marginTop="5dp">
+
+        <TextView
+            android:id="@+id/tv_course_progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:text="总进度:0%"
+            android:textColor="#45C88A"
+            android:textSize="11sp"
+            android:visibility="visible" />
+
+        <TextView
+            android:id="@+id/tv_course_auth"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="100dp"
+            android:layout_alignParentRight="true"
+            android:text="作者:许教师"
+            android:textColor="#999999"
+            android:textSize="11sp"
+            android:visibility="visible" />
+
+    </RelativeLayout>
 
 </LinearLayout>
