--- a/MyApplication/app/src/main/res/layout/item_for_news.xml
+++ b/MyApplication/app/src/main/res/layout/item_for_news.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:gravity="center_vertical">
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@drawable/bg_common_press"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
 
     <ImageView
         android:id="@+id/iv_news_type"
@@ -14,23 +16,23 @@
 
     <TextView
         android:id="@+id/tv_news_info"
-        android:paddingLeft="13dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:singleLine="true"
-        android:ellipsize="end"
+        android:layout_centerVertical="true"
         android:layout_toRightOf="@id/iv_news_type"
-        android:textSize="15sp"
+        android:ellipsize="end"
+        android:paddingLeft="13dp"
+        android:singleLine="true"
         android:text="3月光华国际学校课程表，包含语数外.."
         android:textColor="@color/text_black"
-        android:layout_centerVertical="true"/>
+        android:textSize="15sp"/>
 
     <View
         android:id="@+id/view_line"
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:layout_marginLeft="14dp"
         android:layout_alignParentBottom="true"
+        android:layout_marginLeft="14dp"
         android:background="@color/bg_line"/>
 
 
