--- a/MyApplication/app/src/main/res/layout/activity_about.xml
+++ b/MyApplication/app/src/main/res/layout/activity_about.xml
@@ -1,34 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-    <include layout="@layout/common_view_title_bar_personal" />
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/bg_main"
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/iv_logo"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="80dp"
-        android:src="@drawable/login_logo_icon" />
-    <TextView
-        android:id="@+id/tv_environment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/iv_logo"
-        android:layout_centerHorizontal="true"
-        android:textSize="16sp"
-        android:textColor="@color/md_black_1000"/>
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
+        <include layout="@layout/common_view_title_bar_course" />
+
+        <ImageView
+            android:id="@+id/iv_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="80dp"
+            android:src="@drawable/logo_about" />
+    </LinearLayout>
+
 
     <TextView
         android:id="@+id/tv_version"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="10dp"
-        android:textSize="18sp"
-        android:textColor="@color/md_black_1000"/>
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="30dp"
+        android:text="3.2.1"
+        android:textColor="#aaaaaa"
+        android:textSize="12sp" />
 
 </RelativeLayout>
